[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k3wsjobd"
version = "0.1.2"
description = "Gevent-based WebSocket server for async job processing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Zhang Yanpo", email = "drdr.xp@gmail.com" }
]
keywords = ["websocket", "gevent", "job", "async", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gevent-websocket",
    "psutil",
    "k3thread",
    "k3utfjson",
    "k3jobq",
]

[project.urls]
Homepage = "https://github.com/pykit3/k3wsjobd"
Documentation = "https://k3wsjobd.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "coverage",
    "k3ut",
    "k3proc",
    "k3daemonize",
    "websocket-client",
]
publish = [
    "build",
    "twine",
    "pk3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools]
packages = ["k3wsjobd"]

[tool.setuptools.package-dir]
k3wsjobd = "."

[tool.ruff]
line-length = 120
